--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/willardshikami/store-ke/issues"
   },
+  "dependencies": {
+    "body-parser": "*",
+    "express": "*",
+    "mongodb": "*",
+    "mongoose": "*",
+    "nodemon": "^1.11.0"
+    },
   "homepage": "https://github.com/willardshikami/store-ke#readme"
 }
