--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
     "mongodb": "*",
     "mongoose": "*",
     "nodemon": "^1.11.0"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "^0.5.1"
   }
 }
